app/stylesheet/data-table.scss
.table-hover > tbody > .simple-row:hover > td,
.table-hover > tbody > tr:hover > th {
  background-color: transparent;
  border-bottom-color: inherit;
  cursor: auto;
}

#text_summary_button, #text_summary_button_link {
  .cds--btn--ghost {
    padding-left: 1px;
    padding-right: 1px;
  }

  .cds--btn {
    font-size: 0.75rem;
  }

  .cds--btn--sm {
    min-height: 1rem;
    padding-left: 1px;
    padding-right: 1px;
  }
}

#text_summary_button {
  .cds--btn--ghost {
    color: #161616;
  }
}

.select_filter {
  display: inline-flex;

  .miq-fieldset .miq-fieldset-content {
    margin-top: 0;
    height: 2.5rem;
  }
  .cds--btn.default_button {
    display: flex;
    align-items: center;
  }
}

